# vectordb-bench-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  new-adapter.yml  new-dataset.yml  result-dispute.yml
.github/workflows/: ci.yml  release.yml
crates/vbench-cli/: Cargo.toml
crates/vbench-cli/src/: cmd_cache.rs  cmd_fetch.rs  cmd_inspect.rs  cmd_list.rs  cmd_run.rs  main.rs
crates/vbench-cli/tests/: cli_help.rs
crates/vbench-core/: Cargo.toml
crates/vbench-core/src/: adapter.rs  cache.rs  dataset.rs  download.rs  error.rs  host.rs  lib.rs  metrics.rs  parquet_io.rs  result.rs  runner.rs
crates/vbench-core/tests/: recall.rs  result_schema.rs  runner.rs
crates/vbench-strata/: Cargo.toml
crates/vbench-strata-ipc/: Cargo.toml
crates/vbench-strata-ipc/src/: client.rs  error.rs  lib.rs  types.rs  wire.rs
crates/vbench-strata-ipc/tests/: live_strata.rs  round_trip.rs
crates/vbench-strata/src/: adapter.rs  lib.rs  locate.rs
crates/vbench-strata/tests/: smoke.rs
docs/: adapters.md  datasets.md  fairness.md  interop.md  methodology.md  reproducibility.md  roadmap.md  strata-binary.md  submitting-results.md
results/: HOST.md.template
