[workspace]
resolver = "2"
members = [
    "crates/vbench-core",
    "crates/vbench-strata-ipc",
    "crates/vbench-strata",
    "crates/vbench-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/stratalab/vectordb-bench-rs"
authors = ["vectordb-bench-rs contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Parquet (pinned to match strata-core's workspace)
arrow = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "async"] }

# Metrics
hdrhistogram = "7"

# Utilities
hostname = "0.4"
sysinfo = "0.32"
which = "7"
dirs = "5"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
