[package]
name = "vbench-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and runner for vectordb-bench-rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hdrhistogram = { workspace = true }
hostname = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }

# Dataset loader: HTTP, parquet, async
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
