[package]
name = "vbench-strata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "BenchAdapter implementation for the Strata embedded vector database"

[dependencies]
vbench-core = { path = "../vbench-core" }
vbench-strata-ipc = { path = "../vbench-strata-ipc" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
